tests/errors/stray-top-level-token/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0027]: Unexpected token (decimal digits (e.g. 47)). Expected a top-level definition (`def`, `enum`, `alias`, `trait`, `test`, or `implement`).
  │
1 │ 123
  │ ^^^
  ╰─𜱶 tests/errors/stray-top-level-token/main.pa:1:1
